tests/errors/flow/while-condition-not-bool.fn
---
Description: While condition is an integer not a bool
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        while (1)
        {
            var y = 1
        }
        return 0
    }
}
